# vacancies-scrapper

./: docker-compose.yml  init.sql
data_collection/: Dockerfile  config.py  logger.py  main.py  pyproject.toml  scrapy.cfg  spider_runner.py
data_collection/pracujpl/: items.py  middlewares.py  models.py  pipelines.py  settings.py
data_collection/pracujpl/factories/: vacancy_spider_factory.py
data_collection/pracujpl/interfaces/: __init__.py  cache.py  data_models.py  extraction.py  messaging.py  selecting.py  url_building.py
data_collection/pracujpl/services/: __init__.py
data_collection/pracujpl/spiders/: vacancies_spider.py
data_collection/tests/: test_vacancies_spider.py
db_service/: .gitignore  Dockerfile  config.py  exceptions.py  logger.py  main.py  pyproject.toml  supervisord.conf
db_service/_celery/: __init__.py  celery_app.py  tasks.py
db_service/infrastructure/: kafka_manager.py  redis_cache.py
db_service/interfaces/: cache.py
db_service/models/: __init__.py  config.py  telegram_models.py  vacancy_models.py
db_service/repositories/: criterion_repository.py  user_repository.py  vacancy_repository.py
db_service/services/: criterion_service.py  user_service.py  vacancy_service.py
vacancies_bot/: Dockerfile  bot.py  config.py  main.py  pyproject.toml  states.py
vacancies_bot/handlers/: preferences.py  settings.py  start.py
vacancies_bot/keyboards/: menus.py
vacancies_bot/services/: notifications.py
vacancies_bot/templates/: vacancy_message.html
vacancies_bot/tests/: conftest.py  test_notifications_service.py
(+14 files in other folders)
