[project]
name = "db-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "celery>=5.5.3",
    "confluent-kafka>=2.11.0",
    "dotenv>=0.9.9",
    "kafka-python>=2.2.15",
    "loguru>=0.7.3",
    "psycopg2>=2.9.10",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
]
